force-app/main/default/objects/Review__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Book__c</columns>
    <columns>Content__c</columns>
    <columns>Ratings__c</columns>
    <columns>Reviewer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>